syntax = "proto2";

package trpc.register;

// trpc.msg.register_proxy.RegisterProxy.InfoSyncPush
message TrpcInfoSyncPush {
  optional uint32 result = 1;
  optional string err_msg = 2;
  required uint32 push_flag = 3;
  optional uint32 push_seq = 4;
  optional uint32 retry_flag = 5;
  repeated GroupNode group_nodes = 6;
  optional uint32 use_init_cache_data = 10;
  optional GuildNode guild_nodes = 11;
  //optional RecentContactInfo recent_contact = 12;
}

// push_flag 简析
// 2 通知事件推送 （谁赞了你，频道帖子）
// 5 群消息，频道消息推送

message GroupNode {
  required uint64 peer_id = 1;
  required uint64 msg_seq = 2;
  optional uint64 read_msg_seq = 3;
  optional uint64 mask = 4;
  optional uint64 longest_msg_time = 5;
  required uint64 latest_msg_time = 8;
  required string peer_name = 9;
  optional uint64 longest_msg_seq = 10;
  //optional uint64 all_msg_expired = 11;
  //optional uint64 no_further_msgs = 12;
  optional uint32 random = 14;
  optional uint32 need_to_check_seq_on_aio_open = 15;
}

message GuildNode {
  required uint64 peer_id = 1;

}
